Update VideoActivity.java
Signed-off-by: qq49371114 <143635592+qq49371114@users.noreply.github.com>